# SimplyMarkdown

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  generateRSS.py  generateSitemap.py  helpers.py  markdownTags.py  pyproject.toml  render.py  requirements.txt  subdirectory_helpers.py
.github/workflows/: test.yaml
example.output/: archive.html  blog.html  index.html  rss.xml  sitemap.xml
example.output/posts/2023/02/18/: Hogwarts-Legacy.html
example.output/posts/2023/07/03/: Creative-Coding.html
example/input/: about.md  archive.md  blog.md  index.md  navbar.md
example/input/_modules/: navbar.md
example/input/blog/: blog.md
example/input/blog/posts/: Creative Coding.md  Hogwarts Legacy.md  coding.md
example/input/blog/posts/2023/07/03/: Creative Coding.md
example/input/modules/: example_module.md  footer.md  head_extras.html  navbar.md
example/input/posts/2023/02/18/: Hogwarts Legacy.md
example/input/posts/2023/07/03/: Creative Coding.md
example/input/posts/2055/: test.md
example/input/static/: style.css
example/input/static/css/: style.css
example/output/: about.html  archive.html  blog.html  index.html  navbar.html  rss.xml  sitemap.xml
example/output/blog/: blog.html
example/output/blog/posts/: Creative Coding.html  Creative-Coding.html  Hogwarts Legacy.html  Hogwarts-Legacy.html  post1.html
example/output/posts/2023/02/18/: Hogwarts Legacy.html  Hogwarts-Legacy.html
example/output/posts/2023/07/03/: Creative Coding.html  Creative-Coding.html
example/output/posts/2055/: test.html
example/output/static/css/: theme.css
output/: about.html  index.html
output/blog/: blog.html
output/blog/posts/: coding.html  hogwarts.html  post2.html
simplymarkdown/: __init__.py  cli.py  config.py  markdown_converter.py  renderer.py  server.py  utils.py
simplymarkdown/extensions/: __init__.py  preview.py  related_posts.py  toc_module.py
simplymarkdown/generators/: __init__.py  rss.py  search.py  sitemap.py
templates/: base.html
test/: about.md
test/blog/posts/: hogwarts.md
tests/: __init__.py  test_config.py  test_e2e_features.py  test_generators.py  test_integration.py  test_markdown_converter.py  test_preview_extension.py  test_utils.py
themes/: basic.css  custom-serif.css  custom.css
workflow/: render.yaml
