[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplymarkdown"
version = "2.0.0"
description = "A lightweight static site generator that transforms Markdown files into a fully-functional website"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "cemreefe"}
]
keywords = ["markdown", "static-site-generator", "blog", "website", "html"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.3.4",
    "jinja2>=3.0.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.9.0",
    "Pygments>=2.10.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-beautifulsoup4",
    "types-Markdown",
    "types-PyYAML",
]
watch = [
    "watchdog>=3.0.0",
]
all = [
    "simplymarkdown[dev,watch]",
]

[project.scripts]
simplymarkdown = "simplymarkdown.cli:main"

[project.urls]
Homepage = "https://github.com/cemreefe/SimplyMarkdown"
Repository = "https://github.com/cemreefe/SimplyMarkdown"
Issues = "https://github.com/cemreefe/SimplyMarkdown/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["simplymarkdown*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["simplymarkdown"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "markdown.*",
    "watchdog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["simplymarkdown"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
